# FUDMal

./: .gitignore  README.md  SFX.py  dropper.py  main.py  obfus.py  pdf.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ROADMAP.md
fudmal/: __init__.py  __main__.py  manifest.py
tests/: __init__.py  test_cipher.py  test_logic.py  test_manifest.py
